--- a/wp-content/themes/sr dentdepot/css/style.css
+++ b/wp-content/themes/sr dentdepot/css/style.css
@@ -541,6 +541,10 @@ ul,li{
 	z-index:5;
 }
 
+ul.navigation li.appointment{
+    background-color: #d8ac17;
+}
+
 .main-menu .navbar-collapse{
 	padding:0px 0px;	
 }
