server changes pulled & minor fixes

--- a/wp-content/themes/sr dentdepot/css/style.css
+++ b/wp-content/themes/sr dentdepot/css/style.css
@@ -542,7 +542,7 @@ ul,li{
 }
 
 ul.navigation li.appointment{
-    background-color: #d8ac17;
+    background-color: #1fc780;
 }
 
 .main-menu .navbar-collapse{
